# n8n-mcp

./: CLAUDE.md  README.md  pyproject.toml
.oneiric_cache/: runtime_health.json
n8n_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  server.py
n8n_mcp/tools/: __init__.py  credential_tools.py  execution_tools.py  workflow_tools.py
settings/: n8n.yaml
