[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-mcp"
version = "0.1.0"
description = "MCP server for n8n workflow automation"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.13"
authors = [{ name = "Les Leslie", email = "les@wedgwood.us" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "structlog>=25.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
]

[project.scripts]
n8n-mcp = "n8n_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/lesleslie/n8n-mcp"
Repository = "https://github.com/lesleslie/n8n-mcp.git"

[tool.hatch.build.targets.wheel]
packages = ["n8n_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=n8n_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["n8n_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
